src/tests/snapshots/amber__tests__translation__sub_int_shorthand.ab.snap
---
source: src/tests/translation.rs
expression: ast
---
Block(
    BlockFragment {
        statements: [
            VarStmt(
                VarStmtFragment {
                    name: "x",
                    global_id: Some(
                        0,
                    ),
                    index: None,
                    kind: Int,
                    is_ref: false,
                    optimize_unused: true,
                    operator: "=",
                    value: Raw(
                        RawFragment {
                            value: "20",
                        },
                    ),
                },
            ),
            VarStmt(
                VarStmtFragment {
                    name: "x",
                    global_id: Some(
                        0,
                    ),
                    index: None,
                    kind: Int,
                    is_ref: false,
                    optimize_unused: true,
                    operator: "=",
                    value: Arithmetic(
                        ArithmeticFragment {
                            left: Some(
                                VarExpr(
                                    VarExprFragment {
                                        name: "x",
                                        global_id: Some(
                                            0,
                                        ),
                                        kind: Int,
                                        is_ref: false,
                                        is_length: false,
                                        default_value: None,
                                        is_quoted: true,
                                        is_array_to_string: false,
                                        render_type: BashValue,
                                        index: None,
                                    },
                                ),
                            ),
                            right: Some(
                                Raw(
                                    RawFragment {
                                        value: "8",
                                    },
                                ),
                            ),
                            op: Sub,
                            quoted: true,
                        },
                    ),
                },
            ),
            VarStmt(
                VarStmtFragment {
                    name: "y",
                    global_id: Some(
                        1,
                    ),
                    index: None,
                    kind: Int,
                    is_ref: false,
                    optimize_unused: true,
                    operator: "=",
                    value: Raw(
                        RawFragment {
                            value: "50",
                        },
                    ),
                },
            ),
            VarStmt(
                VarStmtFragment {
                    name: "y",
                    global_id: Some(
                        1,
                    ),
                    index: None,
                    kind: Int,
                    is_ref: false,
                    optimize_unused: true,
                    operator: "=",
                    value: Arithmetic(
                        ArithmeticFragment {
                            left: Some(
                                VarExpr(
                                    VarExprFragment {
                                        name: "y",
                                        global_id: Some(
                                            1,
                                        ),
                                        kind: Int,
                                        is_ref: false,
                                        is_length: false,
                                        default_value: None,
                                        is_quoted: true,
                                        is_array_to_string: false,
                                        render_type: BashValue,
                                        index: None,
                                    },
                                ),
                            ),
                            right: Some(
                                Raw(
                                    RawFragment {
                                        value: "25",
                                    },
                                ),
                            ),
                            op: Sub,
                            quoted: true,
                        },
                    ),
                },
            ),
        ],
        increase_indent: true,
        needs_noop: false,
        is_conditional: false,
    },
)
