src/tests/snapshots/amber__tests__translation__sub_num_expression.ab.snap
---
source: src/tests/translation.rs
expression: ast
---
Block(
    BlockFragment {
        statements: [
            List(
                ListFragment {
                    values: [
                        Raw(
                            RawFragment {
                                value: "echo ",
                            },
                        ),
                        Subprocess(
                            SubprocessFragment {
                                fragment: List(
                                    ListFragment {
                                        values: [
                                            Raw(
                                                RawFragment {
                                                    value: "echo ",
                                                },
                                            ),
                                            Raw(
                                                RawFragment {
                                                    value: "21.2",
                                                },
                                            ),
                                            Raw(
                                                RawFragment {
                                                    value: " '-' ",
                                                },
                                            ),
                                            Raw(
                                                RawFragment {
                                                    value: "7.3",
                                                },
                                            ),
                                            Raw(
                                                RawFragment {
                                                    value: " | bc ",
                                                },
                                            ),
                                            Raw(
                                                RawFragment {
                                                    value: "-l",
                                                },
                                            ),
                                            Raw(
                                                RawFragment {
                                                    value: " | sed '",
                                                },
                                            ),
                                            Raw(
                                                RawFragment {
                                                    value: "/\\./ s/\\.\\{0,1\\}0\\{1,\\}$//",
                                                },
                                            ),
                                            Raw(
                                                RawFragment {
                                                    value: "'",
                                                },
                                            ),
                                        ],
                                        separator: Empty,
                                    },
                                ),
                                quoted: true,
                            },
                        ),
                    ],
                    separator: Empty,
                },
            ),
            List(
                ListFragment {
                    values: [
                        Raw(
                            RawFragment {
                                value: "echo ",
                            },
                        ),
                        Subprocess(
                            SubprocessFragment {
                                fragment: List(
                                    ListFragment {
                                        values: [
                                            Raw(
                                                RawFragment {
                                                    value: "echo ",
                                                },
                                            ),
                                            Subprocess(
                                                SubprocessFragment {
                                                    fragment: List(
                                                        ListFragment {
                                                            values: [
                                                                Raw(
                                                                    RawFragment {
                                                                        value: "echo ",
                                                                    },
                                                                ),
                                                                Raw(
                                                                    RawFragment {
                                                                        value: "2.32",
                                                                    },
                                                                ),
                                                                Raw(
                                                                    RawFragment {
                                                                        value: " '-' ",
                                                                    },
                                                                ),
                                                                Raw(
                                                                    RawFragment {
                                                                        value: "1.12",
                                                                    },
                                                                ),
                                                                Raw(
                                                                    RawFragment {
                                                                        value: " | bc ",
                                                                    },
                                                                ),
                                                                Raw(
                                                                    RawFragment {
                                                                        value: "-l",
                                                                    },
                                                                ),
                                                                Raw(
                                                                    RawFragment {
                                                                        value: " | sed '",
                                                                    },
                                                                ),
                                                                Raw(
                                                                    RawFragment {
                                                                        value: "/\\./ s/\\.\\{0,1\\}0\\{1,\\}$//",
                                                                    },
                                                                ),
                                                                Raw(
                                                                    RawFragment {
                                                                        value: "'",
                                                                    },
                                                                ),
                                                            ],
                                                            separator: Empty,
                                                        },
                                                    ),
                                                    quoted: true,
                                                },
                                            ),
                                            Raw(
                                                RawFragment {
                                                    value: " '-' ",
                                                },
                                            ),
                                            Raw(
                                                RawFragment {
                                                    value: "3.32",
                                                },
                                            ),
                                            Raw(
                                                RawFragment {
                                                    value: " | bc ",
                                                },
                                            ),
                                            Raw(
                                                RawFragment {
                                                    value: "-l",
                                                },
                                            ),
                                            Raw(
                                                RawFragment {
                                                    value: " | sed '",
                                                },
                                            ),
                                            Raw(
                                                RawFragment {
                                                    value: "/\\./ s/\\.\\{0,1\\}0\\{1,\\}$//",
                                                },
                                            ),
                                            Raw(
                                                RawFragment {
                                                    value: "'",
                                                },
                                            ),
                                        ],
                                        separator: Empty,
                                    },
                                ),
                                quoted: true,
                            },
                        ),
                    ],
                    separator: Empty,
                },
            ),
            List(
                ListFragment {
                    values: [
                        Raw(
                            RawFragment {
                                value: "echo ",
                            },
                        ),
                        Subprocess(
                            SubprocessFragment {
                                fragment: List(
                                    ListFragment {
                                        values: [
                                            Raw(
                                                RawFragment {
                                                    value: "echo ",
                                                },
                                            ),
                                            Subprocess(
                                                SubprocessFragment {
                                                    fragment: List(
                                                        ListFragment {
                                                            values: [
                                                                Raw(
                                                                    RawFragment {
                                                                        value: "echo ",
                                                                    },
                                                                ),
                                                                Raw(
                                                                    RawFragment {
                                                                        value: "1.5",
                                                                    },
                                                                ),
                                                                Raw(
                                                                    RawFragment {
                                                                        value: " '-' ",
                                                                    },
                                                                ),
                                                                Raw(
                                                                    RawFragment {
                                                                        value: "3.5",
                                                                    },
                                                                ),
                                                                Raw(
                                                                    RawFragment {
                                                                        value: " | bc ",
                                                                    },
                                                                ),
                                                                Raw(
                                                                    RawFragment {
                                                                        value: "-l",
                                                                    },
                                                                ),
                                                                Raw(
                                                                    RawFragment {
                                                                        value: " | sed '",
                                                                    },
                                                                ),
                                                                Raw(
                                                                    RawFragment {
                                                                        value: "/\\./ s/\\.\\{0,1\\}0\\{1,\\}$//",
                                                                    },
                                                                ),
                                                                Raw(
                                                                    RawFragment {
                                                                        value: "'",
                                                                    },
                                                                ),
                                                            ],
                                                            separator: Empty,
                                                        },
                                                    ),
                                                    quoted: true,
                                                },
                                            ),
                                            Raw(
                                                RawFragment {
                                                    value: " '-' ",
                                                },
                                            ),
                                            Raw(
                                                RawFragment {
                                                    value: "2.5",
                                                },
                                            ),
                                            Raw(
                                                RawFragment {
                                                    value: " | bc ",
                                                },
                                            ),
                                            Raw(
                                                RawFragment {
                                                    value: "-l",
                                                },
                                            ),
                                            Raw(
                                                RawFragment {
                                                    value: " | sed '",
                                                },
                                            ),
                                            Raw(
                                                RawFragment {
                                                    value: "/\\./ s/\\.\\{0,1\\}0\\{1,\\}$//",
                                                },
                                            ),
                                            Raw(
                                                RawFragment {
                                                    value: "'",
                                                },
                                            ),
                                        ],
                                        separator: Empty,
                                    },
                                ),
                                quoted: true,
                            },
                        ),
                    ],
                    separator: Empty,
                },
            ),
        ],
        increase_indent: true,
        needs_noop: false,
        is_conditional: false,
    },
)
